--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body>
     <!-- Navigation -->
     <nav
-      class="navbar navbar-expand-lg dark fixed-top"
+      class="navbar navbar-expand-lg dark"
       style="background-color: #bed02e"
     >
       <div class="container">
@@ -341,8 +341,8 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.3617512394493!2d-74.207771!3d4.715156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f84d025df4d7b%3A0x7f658b394d6e7854!2sFunza%2C%20Cundinamarca!5e0!3m2!1ses!2sco!4v1630066184382!5m2!1ses!2sco"
                 class="embed-responsive-item"
                 style="border: 0"
-                allowfullscreen=""
                 loading="lazy"
+                width="100%"
               ></iframe>
             </div>
           </div>
